# optimization-solvers

./: .gitignore  Cargo.toml  LICENSE  Readme.md  WASM_README.md  build-wasm.sh  build.rs  quadratic.html  resources.md
barter/: t.aux  t.fdb_latexmk  t.fls  t.tex  test.ipynb
examples/: README.md  bfgs_bounded_example.rs  bfgs_example.rs  broyden_bounded_example.rs  broyden_example.rs  coordinate_descent_example.rs  dfp_bounded_example.rs  dfp_example.rs  gradient_descent_example.rs  newton_example.rs  pnorm_descent_example.rs  projected_gradient_example.rs  quadratic.rs  quadratic_with_plots.rs  spg_example.rs  sr1_bounded_example.rs
src/: func_eval.rs  lib.rs  ls_solver.rs  number.rs  optimization_solver.rs  plotter_3d.rs  solver.rs  tracer.rs  wasm.rs
src/line_search/: backtracking.rs  backtracking_b.rs  gll_quadratic.rs  mod.rs  morethuente.rs  morethuente_b.rs  nosearch.rs  projected_backtracking.rs  projected_morethuente.rs
src/linesearch/: backtracking.rs
src/newton/: mod.rs  projected_newton.rs  spn.rs
src/online/: osgmg.rs
src/quasi_newton/: bfgs.rs  bfgs_b.rs  bfgsb.rs  broyden.rs  broyden_b.rs  dfp.rs  dfp_b.rs  lbfgsb.rs  sr1.rs  sr1_b.rs
src/solvers/newton/: mod.rs
src/solvers/steepest_descent/: coordinate_descent.rs  gradient_descent.rs  mod.rs  pnorm_descent.rs
src/steepest_descent/: coordinate_descent.rs  gradient_descent.rs  mod.rs  pnorm_descent.rs  projected_gradient_descent.rs  spg.rs
wasm/: README.md  build-wasm.sh
wasm/demo/: README.md  index.html
