[package]
name = "optimization-solvers"
version = "0.1.0"
edition = "2021"
authors = ["Federico Magnani <0xdrun@gmail.com>"]

description = "Numerical optimization solvers for unconstrained and simple-bounds constrained convex optimization problems"
repository = "https://github.com/fedemagnani/optimization-solvers"
license = "MIT OR Apache-2.0"
keywords = ["optimization", "convex", "minimization", "solver", "math"]
categories = ["algorithms", "mathematics", "finance", "science"]
readme = "Readme.md"

[dependencies]
derive-getters = "0.5.0"
# nalgebra = { git = "https://github.com/dimforge/nalgebra", rev = "48c8f6a5053fac48e305f5e5e0004a332811d092" }
nalgebra = { version = "0.33.2" }
thiserror = "2.0.3"

tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "fmt",
    "json",
] }
rand = "0.8.5"
rayon = "1.10.0"
lbfgsb-sys = { version = "0.1.1", path = "./lbfgsb-sys", optional = true }
plotly = "0.10.0"
num-traits = "0.2.19"
[features]
default = ['lbfgsb']
lbfgsb = ["lbfgsb-sys"]
