[package]
name = "optimization-solvers"
version = "0.1.0"
edition = "2021"
authors = ["Federico Magnani <0xdrun@gmail.com>"]

description = "Numerical optimization solvers for unconstrained and simple-bounds constrained convex optimization problems"
repository = "https://github.com/fedemagnani/optimization-solvers"
license = "MIT OR Apache-2.0"
keywords = ["optimization", "convex", "minimization", "solver", "math"]
categories = ["algorithms", "mathematics", "finance", "science"]
readme = "Readme.md"

[dependencies]
derive-getters = "0.5.0"
nalgebra = { version = "0.33.2" }
thiserror = "2.0.3"

# Conditional dependencies for different targets
tracing = { version = "0.1.40", optional = true }
tracing-appender = { version = "0.2.3", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true, features = [
    "env-filter",
    "fmt",
    "json",
] }
rand = { version = "0.8.5", optional = true, features = ["getrandom"] }
rayon = { version = "1.10.0", optional = true }
lbfgsb-sys = { version = "0.1.0", optional = true }
plotly = { version = "0.10.0", optional = true }
num-traits = "0.2.19"

# WASM-specific dependencies
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }

[features]
default = ["std"]
std = ["tracing", "tracing-appender", "tracing-subscriber", "rand", "rayon", "plotly"]
lbfgsb = ["lbfgsb-sys"]
wasm = ["wasm-bindgen", "js-sys", "web-sys"]

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
getrandom = { version = "0.2", features = ["js"] }
